--- a/elements/monicore-app.html
+++ b/elements/monicore-app.html
@@ -53,7 +53,7 @@
       </div>
       <paper-toast id="toast" text="Your page has been loaded."></paper-toast>
     </core-header-panel>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="../styles/main.css">
   </template>
   <script>
     Polymer({
