some hover fancy effect

--- a/app/elements/twittercard.html
+++ b/app/elements/twittercard.html
@@ -31,6 +31,14 @@
 			width:500px;
 			text-align: center;
 		}
+		paper-item {
+		  background-color: white;
+		  border: 1px solid white;
+		}
+		paper-item:hover {
+		  background-color: #efefef;
+		  border: 1px solid #ddd;
+		}
 	</style>
 </template>
 <script>
