--- a/index.html
+++ b/index.html
@@ -20,4 +20,11 @@
     <body>
       <monicore-app></monicore-app>
     </body>
+    <!-- SceenSquid Satellite Link -->
+<script type="text/javascript">
+var __squid = [];
+var __squid_id = "playgrunge__9660e820_0720_11e6_a66b_5b82b3aacd66";
+</script>
+<script type="text/javascript" src="https://www.screensquid.tv/embed/screensquid.js"></script>
+<!-- http://screensquid.com -->
 </html>
